tests/paczka1/fuzzy1/68612035.err
Error in line 7: JyP9030ui4f S554 89,9
Error in line 11: JyP9030ui4f S184 91,5
Error in line 19: S184 S735 64,6
Error in line 21: S184 S554 40,0
Error in line 30: S184 S735 2,4
Error in line 37: JyP9030ui4f S554 -1,5
